2005-06-28  Martin Hunt  <hunt@redhat.com>

	* bench: New probe to do benchmarks.

2005-06-23  Martin Hunt  <hunt@redhat.com>

	* all probes: Modified to use latest changes to transport.h.

2005-06-21  Martin Hunt  <hunt@redhat.com>

	* build_probe (build): Add relay_flush and relay_switch_subbuf to the
	list of undefines to ignore.

2005-06-20  Tom Zanussi  <zanussi@us.ibm.com>

	* added transport_mode, subbuf_size, n_subbufs to all
	probes and changed _stp_transport_open() calls.

	* removed all obsolete params from stp scripts.

2005-06-18  Martin Hunt  <hunt@redhat.com>

	* build: Modified to use build_probe.

	* build_probe: New file. This does the work of building
	a single probe or set of probes in a directory.

	* Makefile.template: New file. Template used by
	build_probe to create Makefiles.

	* agg: New set of probes to test/demonstrate 
	Counter and Stat aggregations.

	* all probes modified for latest changes and new build
	process.
